fix: center align long names

--- a/components/index/PokemonCard/PokemonCard.module.scss
+++ b/components/index/PokemonCard/PokemonCard.module.scss
@@ -94,6 +94,7 @@
   font-family: pokemon;
   font-size: 2.75rem;
   margin: 0;
+  text-align: center;
 
   @media (min-width: 1024px) {
     font-size: 3.5rem;
